--- a/industries/intercontinental-passenger-airport.yaml
+++ b/industries/intercontinental-passenger-airport.yaml
@@ -1,7 +1,11 @@
 available: true
 callbacks: ''
-cargoAcceptance: []
-cargoProduction: []
+cargoAcceptance:
+- PASS
+- MAIL
+cargoProduction:
+- PASS
+- MAIL
 colour: 1
 fundCostMultiplier: 255
 id: 0
@@ -80,39 +84,13 @@ tiles:
   - alwaysDraw: true
     drawType: recolour
     sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/0.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
       filename: industries/intercontinental-passenger-airport/2.png
       left: -31
       top: 0
   - alwaysDraw: false
     drawType: recolour
     sprite:
-      filename: industries/intercontinental-passenger-airport/0.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/3.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/0.png
+      filename: industries/intercontinental-passenger-airport/1.png
       left: -31
       top: 0
 - sprites:
@@ -125,241 +103,7 @@ tiles:
   - alwaysDraw: false
     drawType: recolour
     sprite:
-      filename: industries/intercontinental-passenger-airport/0.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/5.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/0.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/6.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/0.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/7.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/8.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/9.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/10.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/11.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/12.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/13.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/14.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/15.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/16.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/17.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/18.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/19.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/20.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/21.png
-      left: -31
-      top: 0
-- sprites:
-  - alwaysDraw: true
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/1.png
-      left: -31
-      top: 0
-  - alwaysDraw: false
-    drawType: recolour
-    sprite:
-      filename: industries/intercontinental-passenger-airport/22.png
+      filename: industries/intercontinental-passenger-airport/3.png
       left: -31
       top: 0
 type: primary
